force-app/main/default/objects/GenericFieldMapping__mdt/GenericFieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>GenericFieldMapping</label>
    <pluralLabel>GenericFieldMapping</pluralLabel>
</CustomObject>