force-app/main/default/objects/GenericFieldMapping__mdt/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>GenericFieldMapping</relationshipLabel>
    <relationshipName>GenericFieldMapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>