force-app/main/default/objects/GenericFieldMapping__mdt/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>Field1</label>
    <metadataRelationshipControllingField>GenericFieldMapping__mdt.Entity__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GenericFieldMapping</relationshipLabel>
    <relationshipName>GenericFieldMapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>