force-app/main/default/objects/GenericFieldMapping__mdt/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>Field2</label>
    <metadataRelationshipControllingField>GenericFieldMapping__mdt.Entity__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GenericFieldMapping1</relationshipLabel>
    <relationshipName>GenericFieldMapping1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>