force-app/main/default/objects/GenericFieldMapping__mdt/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <label>TargetField</label>
    <metadataRelationshipControllingField>GenericFieldMapping__mdt.Entity__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GenericFieldMapping2</relationshipLabel>
    <relationshipName>GenericFieldMapping2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>