force-app/main/default/objects/GenericFieldMapping__mdt/fields/TargetValue__c.field-meta.xml
<CustomField>
    <fullName>TargetValue__c</fullName>
    <label>TargetValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>