force-app/main/default/objects/GenericFieldMapping__mdt/fields/Value1__c.field-meta.xml
<CustomField>
    <fullName>Value1__c</fullName>
    <label>Value1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>