force-app/main/default/objects/GenericFieldMapping__mdt/fields/Value2__c.field-meta.xml
<CustomField>
    <fullName>Value2__c</fullName>
    <label>Value2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>